Changed key name in config.js

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "db": {
         "host" : "localhost",
-        "account": "mysql",
+        "user": "mysql",
         "password": "mysql",
         "database": "database"
     },
