--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nuxtjs/pwa": "^3.0.0-0"
   },
   "devDependencies": {
+    "@nuxtjs/moment": "^1.3.0",
     "node-sass": "^4.12.0",
     "nodemon": "^1.18.9",
     "sass-loader": "^8.0.0"
