--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
   },
   "homepage": "https://github.com/seadog007/breach.tw#readme",
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-0",
+    "ant-design-vue": "^1.1.10",
     "cross-env": "^5.2.0",
     "koa": "^2.6.2",
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
+    "n-readlines": "^1.0.0",
+    "nuxt": "^2.0.0",
     "promise-mysql": "^4.1.0",
-    "ant-design-vue": "^1.1.10",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "@nuxtjs/moment": "^1.3.0",
