move debug seitch into env var

--- a/config.json
+++ b/config.json
@@ -5,6 +5,5 @@
         "password": "password",
         "database": "db"
     },
-    "uploadDir": "./tmp",
-    "debug": true
+    "uploadDir": "./tmp"
 }
