--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "koa-body": "^4.1.1",
     "koa-router": "^7.4.0",
     "n-readlines": "^1.0.0",
+    "nodemailer": "^6.3.1",
     "nuxt": "^2.0.0",
     "promise-mysql": "^4.1.1",
     "uuid": "^3.3.3"
